// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Renders with active className 1`] = `
<a
  class="c-jMNWxy c-PJLV c-PJLV-bkBmvX-active-true"
  href="/#"
>
  Children
</a>
`;

exports[`<Link /> Renders with children 1`] = `
<a
  class="c-jMNWxy c-PJLV"
  href="/#"
>
  Children
</a>
`;
